# limitation

./: .editorconfig  .gitignore  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  release-please-config.json  requirements.txt
products/evidpath/: .env.example  CHANGELOG.md  DEMO.md  EXTERNAL_TARGET_CONTRACT.md  EXTERNAL_TARGET_CONTRACT_SEARCH.md  README.md  README_PYPI.md  RELEASING.md  pyproject.toml
products/evidpath/examples/hf_recommender_service/: README.md  app.py  run.py
products/evidpath/examples/recommender_external_shape/: README.md  __init__.py  driver_config.json  server.py
products/evidpath/examples/recommender_http_service/: README.md  __init__.py  app.py  artifacts.py  wrapper_template.py
products/evidpath/examples/recommender_huggingface_inproc/: README.md  __init__.py  recsys.py  run.py
products/evidpath/examples/recommender_in_process/: README.md  __init__.py  driver_config.json  recsys.py
products/evidpath/examples/recommender_in_process_python_api/: README.md  __init__.py  recsys.py  run.py
products/evidpath/examples/recommender_schema_mapped_jsonpath/: README.md  __init__.py  driver_config.json  server.py
products/evidpath/examples/recommender_schema_mapped_transform/: README.md  __init__.py  driver_config.json  evidpath_transform.py  server.py
products/evidpath/src/evidpath/: __init__.py  __main__.py  api.py  audit.py  cli.py  config.py  domain_registry.py  generation_support.py  regression.py  regression_policy.py  schema.py  semantic_interpretation.py
products/evidpath/src/evidpath/adapters/: __init__.py  base.py  huggingface.py  mlflow.py  sklearn.py
products/evidpath/src/evidpath/agents/: base.py
products/evidpath/src/evidpath/analysis/: __init__.py  slice_discovery.py
products/evidpath/src/evidpath/artifacts/: __init__.py  _determinism.py  _environment.py  constants.py  run_manifest.py  run_plan.py
products/evidpath/src/evidpath/cli_app/: __init__.py  constants.py  handlers.py  parser.py  support.py
products/evidpath/src/evidpath/contracts/: core.py  recommender.py
products/evidpath/src/evidpath/domains/: __init__.py  base.py  stub.py
products/evidpath/src/evidpath/judges/: base.py
products/evidpath/src/evidpath/orchestration/: __init__.py  _planner_decisions.py  _planner_support.py  coverage.py  executor.py  planner.py  types.py
products/evidpath/src/evidpath/reporting/: __init__.py  base.py  chart.py  json.py  markdown.py  regression.py  semantic_json.py
products/evidpath/src/evidpath/rollout/: engine.py
products/evidpath/src/evidpath/scenarios/: __init__.py
products/evidpath/tests/: conftest.py  test_audit_python_api.py  test_audit_python_api_slow.py  test_chunk_10.py  test_chunk_11a.py  test_chunk_11b.py  test_chunk_12.py  test_chunk_13.py  test_chunk_14.py  test_chunk_16.py  test_chunk_17.py  test_chunk_18.py  test_chunk_19.py  test_chunk_2.py  test_chunk_20.py  test_chunk_21.py  test_chunk_21_hf.py  test_chunk_22.py  test_chunk_22c_orchestration.py  test_chunk_6.py  test_chunk_7.py  test_chunk_8.py  test_chunk_9.py  test_cli_contracts.py  test_core_contracts.py  test_determinism.py  test_determinism_slow.py  test_domain_boundaries.py  test_provider_contracts.py  test_reference_service.py  test_regression_policy.py  test_reporting_artifacts.py  test_run_plans.py  test_semantics.py
products/evidpath/tests/adapters/: __init__.py  test_adapters_huggingface.py  test_adapters_mlflow.py  test_adapters_sklearn.py
products/evidpath/tests/domains/recommender/: test_behavior_plan_adjustments.py  test_domain.py  test_domain_contracts.py  test_drivers.py  test_drivers_in_process.py  test_drivers_in_process_slow.py  test_drivers_jsonpath.py  test_drivers_schema_mapped.py  test_drivers_schema_mapped_slow.py  test_drivers_schema_mapped_transforms.py  test_drivers_schema_mapped_transforms_slow.py  test_examples_slow.py  test_generation_offline.py  test_hf_example_slow.py  test_reference_service_slow.py  test_slices.py  test_system_workflows_slow.py
products/evidpath/tests/domains/search/: test_contracts.py  test_reference_backend.py  test_search_domain.py  test_search_drivers.py  test_search_drivers_http_native.py  test_search_drivers_in_process.py  test_search_drivers_schema_mapped.py  test_search_judge.py  test_search_scenarios.py
products/interaction-harness/: DEMO.md  EXTERNAL_TARGET_CONTRACT.md  README.md  RELEASING.md  pyproject.toml
products/interaction-harness/examples/hf_recommender_service/: README.md  __init__.py  app.py  run.py
products/interaction-harness/examples/recommender_http_service/: README.md  app.py  run.py
products/interaction-harness/src/interaction_harness/: __init__.py  __main__.py  audit.py  catalog.py  cli.py  config.py  domain_registry.py  generation_support.py  population_generation.py  recommender_inputs.py  regression.py  regression_policy.py  run_manifest.py  run_plan.py  scenario_generation.py  schema.py  semantic_interpretation.py
products/interaction-harness/src/interaction_harness/adapters/: base.py  http.py  stub.py
products/interaction-harness/src/interaction_harness/agents/: base.py  recommender.py  stub.py
products/interaction-harness/src/interaction_harness/analysis/: base.py  recommender.py  recommender_metrics.py  recommender_slices.py  stub.py
products/interaction-harness/src/interaction_harness/artifacts/: run_manifest.py  run_plan.py
products/interaction-harness/src/interaction_harness/cli_app/: parser.py  progress.py
products/interaction-harness/src/interaction_harness/contracts/: __init__.py  recommender.py
products/interaction-harness/tests/: test_chunk_10.py  test_chunk_11a.py  test_chunk_11b.py  test_chunk_12.py  test_chunk_13.py  test_chunk_14.py  test_chunk_16.py  test_chunk_17.py  test_chunk_18.py  test_chunk_19.py  test_chunk_2.py  test_chunk_20.py  test_chunk_21.py  test_chunk_21_hf.py  test_chunk_22.py  test_chunk_22c_orchestration.py  test_chunk_6.py  test_chunk_7.py  test_chunk_8.py  test_chunk_9.py  test_reference_service.py
studies/: README.md
(+129 files in other folders)
