[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "evidpath"
version = "0.1.0"
description = "CLI-first interaction testing harness with domain-owned semantics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "fastapi>=0.115",
    "pytest>=8.0",
    "ruff>=0.11",
    "twine>=6.1",
    "uvicorn>=0.30",
]
hf-example = ["transformers>=5.5", "torch>=2.11"]

[project.scripts]
evidpath = "evidpath.__main__:cli_entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
