[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "evidpath"
version = "0.1.0"
description = "Deterministic interaction-testing CLI for auditing recommender systems with seeded users, trace-based judging, and reproducible regression workflows."
readme = {file = "README_PYPI.md", content-type = "text/markdown"}
requires-python = ">=3.11"
authors = [
    {name = "Alankrit Verma", email = "alankrit386@gmail.com"},
]
maintainers = [
    {name = "Alankrit Verma", email = "alankrit386@gmail.com"},
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    "recommender",
    "evaluation",
    "testing",
    "audit",
    "regression",
    "synthetic-users",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NDETERMINA/limitation/tree/main/products/evidpath"
Source = "https://github.com/NDETERMINA/limitation"
Issues = "https://github.com/NDETERMINA/limitation/issues"
Documentation = "https://github.com/NDETERMINA/limitation/tree/main/products/evidpath"
Releases = "https://github.com/NDETERMINA/limitation/releases"
PyPI = "https://pypi.org/project/evidpath/"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "fastapi>=0.115",
    "pytest>=8.0",
    "ruff>=0.11",
    "twine>=6.1",
    "uvicorn>=0.30",
]
hf-example = ["transformers>=5.5", "torch>=2.11"]

[project.scripts]
evidpath = "evidpath.__main__:cli_entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"evidpath.domains.recommender" = ["reference_backend_artifacts.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: service, subprocess, or full workflow tests that are skipped by default",
    "system: tests that exercise a running target, service context, or full Evidpath workflow",
    "example: tests that exercise packaged example applications or wrappers",
]
